--- a/home.html
+++ b/home.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
   </head>
   <body>
     <h1>Hello World!</h1>
-    <ol>
-      <li>2</li>
-      <li>5</li>
-      <li>1</li>
-      <li>3</li>
-      <li>4</li>
-    </ol>
   </body>
 </html>
