--- a/home.html
+++ b/home.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Walerong</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <h2>Hi!</h2>
+    </body>
 </html>
